[package]
name = "zombie"
version = "0.1.0"
authors = ["Nicolas Winkler <nicolas.winkler@gmx.ch>"]
edition = "2018"

#[dependencies.assembler]
#path = "assembler/workspace/assembler"
#[dependencies.x86asm]
#path = "rust-x86asm"
[dependencies]
dynasm = "0.5.2"
dynasmrt = "0.5.2"
winapi = "*"
typed-arena = "1.4.1"
clap = "2.33.3"
